@@ -3,6 +3,8 @@
           (http://www.packetfence.org/mantis/view.php?id=319)
         added VLAN isolation template
           (http://www.packetfence.org/mantis/view.php?id=318)
+        encourage usage of Net::RawIP version 0.2
+          (http://www.packetfence.org/mantis/view.php?id=320)
 
 
 1.7.0
